syntax = "proto3";
option go_package = "FusionBridge/metadata/network";

import "google/protobuf/timestamp.proto";

package id;


message ARPPacket {
    bytes  SrcHwAddy = 1;
    bytes  SrcProtAdd = 2;
    bytes  DstHwAddy = 3;
    bytes  DstProtAdd = 4;
    uint32 Operation = 5;
    uint32 Protocol = 6;
}

message EthernetPacket {
    string SRC_MAC = 3;
    string DST_MAC = 4;
    uint32 Length = 8;
}


message IPPacket {
    string SRC_IP = 1;
    string DST_IP = 2;
    bool V4 = 3;
}

message TCPPacket {
    uint32 SrcPort = 1;
    uint32 DstPort = 2;
}

message UDPPacket {
    uint32 SrcPort = 1;
    uint32 DstPort = 2;
}

message  ICMPPacket {
    // This is intentionally empty
}


message DNSQuestion {
    uint32 Type = 1;
    string Name = 3;
}

message DNSResourceRecord {
    uint32 Type = 1;
    string IP = 2;
    string Name = 3;
}

message DNSPacket {
    repeated DNSQuestion Questions = 1;
    repeated DNSResourceRecord Answers=  2;
}


message TLSPacket {
    // Intentionally empty
}

message Packet {

    int32 SubmissionNumber = 1;
    google.protobuf.Timestamp TimeStamp = 2; // A unix timestamp
    string Dev = 16;

    string LinkProtocol = 3;
    string NetworkProtocol = 4;
    string TransportProtocol = 5;
    string ApplicationProtocol = 6;
    
    // Link layer
    ARPPacket ARP = 7;
    EthernetPacket ETH = 8;

    // Networking layer
    IPPacket IP = 9;
    ICMPPacket ICMP = 10;

    // Transport Layer
    TCPPacket TCP = 11;
    UDPPacket UDP = 12;

    // Application layer
    DNSPacket DNS = 14;
    TLSPacket TLS = 15;
}


// This will happen over all interfaces in infra & bundle them
message NetworkSlice {
    int32 SubmissionNumber = 1;
    google.protobuf.Timestamp TimeStamp = 2; // A unix timestamp
    repeated Packet Packets = 16;
    string DevID = 17;
}


message NetworkACK {
    int32 SubmissionNumber = 1;
    int32 Type = 2;
}


service Network {
    rpc LogNetworkActivity(NetworkSlice) returns (NetworkACK) {}
}

